--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,19 +2,19 @@ name: CI #自动化的名称
 on:
   push: # push的时候触发
     branches: # 那些分支需要触发
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest # 镜像市场
     steps:
       - name: checkout # 步骤的名称
-        uses: actions/checkout@v2.3.4 #软件市场的名称
+        uses: actions/checkout@v3 #软件市场的名称
         with: # 参数
           submodules: true
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2.4.13
         with:
-          hugo-version: 0.91.2
+          hugo-version: 'latest'
           extended: true
       - name: Build
         run: hugo -D
